# sdkwork-music

./: .gitignore  AGENTS.md  ARCHITECTURE_VERIFICATION.md  Cargo.toml  HOME_SHELVES_FEATURE_REPORT.md  MUSIC_APP_DESIGN_REPORT.md  README.md  RESTRUCTURE_REPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apps/: README.md
apps/sdkwork-music-flutter-mobile/: AGENTS.md  README.md  pubspec.yaml  sdkwork.app.config.json
apps/sdkwork-music-flutter-mobile/.sdkwork/: README.md
apps/sdkwork-music-flutter-mobile/docs/: INDEX.yaml  README.md
apps/sdkwork-music-flutter-mobile/lib/: app.dart  auth_gate.dart  main.dart
apps/sdkwork-music-flutter-mobile/specs/: component.spec.json  dependency.composition.json
apps/sdkwork-music-h5/: AGENTS.md  README.md  package.json  sdkwork.app.config.json
apps/sdkwork-music-h5/.sdkwork/: README.md
apps/sdkwork-music-h5/docs/: INDEX.yaml  README.md
apps/sdkwork-music-h5/specs/: component.spec.json  dependency.composition.json
apps/sdkwork-music-h5/src/: App.tsx  AuthGate.tsx  index.css
apps/sdkwork-music-pc/: AGENTS.md  README.md  index.html  package.json  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-music-pc/.sdkwork/: README.md
apps/sdkwork-music-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-music-pc/specs/: component.spec.json  dependency.composition.json
apps/sdkwork-music-pc/src/: App.tsx  index.css
configs/: README.md
crates/: README.md
crates/sdkwork-api-music-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-music-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-music-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-music-core-rust/: Cargo.toml  README.md
crates/sdkwork-music-core-rust/specs/: README.md  component.spec.json
crates/sdkwork-music-core-rust/src/: lib.rs
crates/sdkwork-music-core-rust/tests/: music_core_standard.rs
crates/sdkwork-music-database-host/: Cargo.toml
crates/sdkwork-music-database-host/src/: lib.rs
crates/sdkwork-music-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-music-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-music-generation-mcp-service/: Cargo.toml  README.md
crates/sdkwork-music-generation-mcp-service/specs/: README.md  component.spec.json
crates/sdkwork-music-generation-mcp-service/src/: catalog.rs  dto.rs  error.rs  handler.rs  lib.rs  task_store.rs  transport.rs
crates/sdkwork-music-generation-mcp-service/tests/: mcp_contract_standard.rs
crates/sdkwork-music-generation-provider-adapter/: Cargo.toml  README.md
crates/sdkwork-music-generation-provider-adapter/specs/: component.spec.json
crates/sdkwork-music-generation-provider-adapter/src/: adapter.rs  lib.rs  normalization.rs  requests.rs  routing.rs
crates/sdkwork-music-generation-provider-adapter/tests/: provider_adapter_standard.rs
crates/sdkwork-music-generation-provider-spi/: Cargo.toml  README.md
crates/sdkwork-music-generation-provider-spi/specs/: component.spec.json
crates/sdkwork-music-generation-provider-spi/src/: error.rs  lib.rs  model.rs  provider.rs  registry.rs
crates/sdkwork-music-generation-service/: Cargo.toml  README.md
crates/sdkwork-music-generation-service/specs/: component.spec.json
crates/sdkwork-music-generation-service/src/: lib.rs  service.rs
crates/sdkwork-music-generation-service/tests/: provider_service_standard.rs
crates/sdkwork-music-storage-sqlx-rust/: Cargo.toml  README.md
crates/sdkwork-music-storage-sqlx-rust/migrations/: 0001_music_foundation.sql
crates/sdkwork-music-storage-sqlx-rust/specs/: README.md  component.spec.json
crates/sdkwork-music-storage-sqlx-rust/src/: bootstrap.rs  lib.rs
crates/sdkwork-music-storage-sqlx-rust/tests/: music_storage_standard.rs
crates/sdkwork-routes-music-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-music-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-music-app-api/src/: lib.rs
crates/sdkwork-routes-music-app-api/tests/: music_app_routes_standard.rs
crates/sdkwork-routes-music-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-music-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-music-backend-api/src/: lib.rs
crates/sdkwork-routes-music-backend-api/tests/: music_backend_routes_standard.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/seeds/common/: 001_bootstrap.sql
deployments/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/decisions/: ADR-20260719-music-generation-provider-spi.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-routes-music-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-routes-music-backend-api.route-manifest.json
sdks/sdkwork-music-app-sdk/: .sdkwork-assembly.json  README.md  package.json  sdk-manifest.json
sdks/sdkwork-music-app-sdk/openapi/: sdkwork-music-app-api.openapi.json
sdks/sdkwork-music-app-sdk/sdkwork-music-app-sdk-typescript/: package.json
sdks/sdkwork-music-app-sdk/specs/: README.md  component.spec.json
sdks/sdkwork-music-backend-sdk/: .sdkwork-assembly.json  README.md  package.json  sdk-manifest.json
sdks/test/: music-clawrouter-dependency-contract.test.mjs  music-openapi-boundary.test.mjs  music-schema-quality-gate.test.mjs
specs/: README.md  component.spec.json  iam.module.manifest.json
tests/: music-migration-contract.test.mjs  pc-react-core-boundary.test.mjs
tests/shims/: sdkwork-core-pc-react.ts
tools/: materialize_music_database_contract.mjs  music_openapi_export.mjs  music_schema_quality_gate.mjs  music_sdk_generate.mjs  music_sdk_generator_runner.mjs
(+50 files in other folders)
