[workspace]
members = [
    "crates/sdkwork-music-core-rust",
    "crates/sdkwork-music-storage-sqlx-rust",
    "crates/sdkwork-routes-music-app-api",
    "crates/sdkwork-routes-music-backend-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Internal SDKWork workspace members - declared once at workspace root
sdkwork-music-core-rust = { path = "crates/sdkwork-music-core-rust" }
sdkwork-music-storage-sqlx-rust = { path = "crates/sdkwork-music-storage-sqlx-rust" }
sdkwork-routes-music-app-api = { path = "crates/sdkwork-routes-music-app-api" }
sdkwork-routes-music-backend-api = { path = "crates/sdkwork-routes-music-backend-api" }
# Cross-repository SDKWork dependencies
sdkwork-drive-product = { path = "../sdkwork-drive/services/sdkwork-drive-product" }
sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }

