[workspace]
members = [
    "crates/sdkwork-music-gateway-assembly",
    "crates/sdkwork-music-core-rust",
    "crates/sdkwork-music-database-host",
    "crates/sdkwork-music-storage-sqlx-rust",
    "crates/sdkwork-routes-music-app-api",
    "crates/sdkwork-routes-music-backend-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork-music-database-host = { path = "crates/sdkwork-music-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
# Internal SDKWork workspace members - declared once at workspace root
sdkwork-music-core-rust = { path = "crates/sdkwork-music-core-rust" }
sdkwork-music-storage-sqlx-rust = { path = "crates/sdkwork-music-storage-sqlx-rust" }
sdkwork-routes-music-app-api = { path = "crates/sdkwork-routes-music-app-api" }
sdkwork-routes-music-backend-api = { path = "crates/sdkwork-routes-music-backend-api" }
# Cross-repository SDKWork dependencies
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }
