[package]
name = "sdkwork-api-music-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-music application HTTP plane."

[lib]
name = "sdkwork_api_music_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-music-app-api.workspace = true
sdkwork-routes-music-backend-api.workspace = true
