[package]
name = "sdkwork-music-database-host"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
version = "0.1.0"
description = "SDKWork Music database lifecycle bootstrap."

[lib]
name = "sdkwork_music_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
