[package]
name = "sdkwork-music-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-music application HTTP plane."

[lib]
name = "sdkwork_music_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_music_app_api = { package = "sdkwork-routes-music-app-api", path = "../sdkwork-routes-music-app-api" }
sdkwork_routes_music_backend_api = { package = "sdkwork-routes-music-backend-api", path = "../sdkwork-routes-music-backend-api" }
