[package]
name = "sdkwork-music-generation-mcp-service"
version.workspace = true
edition.workspace = true
description = "Model Context Protocol adapter for SDKWork music generation."

[dependencies]
rmcp.workspace = true
schemars.workspace = true
sdkwork-music-generation-service.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum = { version = "0.8", default-features = false }
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
