[package]
name = "sdkwork-music-storage-sqlx-rust"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_music_storage_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-drive-product = { path = "../../../sdkwork-drive/services/sdkwork-drive-product" }
sdkwork-drive-storage-contract = { path = "../../../sdkwork-drive/crates/sdkwork-drive-storage-contract" }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
