[package]
name = "sdkwork-music-storage-sqlx-rust"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_music_storage_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-music-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-drive-workspace-service.workspace = true
sdkwork-drive-storage-contract.workspace = true
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
